k8s-specifications/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - command:
        - /app/scripts/gunicorn.sh
        image: froggytaipei/froggy-service-api:latest
        name: froggy-service-api
        ports:
        - containerPort: 8000
          name: api-port
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 30
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readiness
            port: api-port
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 30
