k8s-specifications/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: froggytaipei/froggy-service-nginx:latest
        name: froggy-service-nginx
        ports:
        - containerPort: 80
          protocol: TCP
