k8s-specifications/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-service
  namespace: app
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: api
  type: NodePort
