k8s-specifications/admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "admin-ingress"
spec:
  backend:
    serviceName: api-service
    servicePort: 8000
