k8s-specifications/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fs-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "app-ingress"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /*
      - backend:
          serviceName: api-service
          servicePort: 8000
        path: /api/*
      - backend:
          serviceName: api-service
          servicePort: 8000
        path: /admin/*
